Corrección para font Rubik

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     content='Efficiently manage your personal finances with Profit&Lost. Track your expenses, manage accounts, and stay financially organized.' />
   <meta name='twitter:image'
     content='https://res.cloudinary.com/dz0mwxb0v/image/upload/v1697122157/profit-lost.com/logo/logo.svg' />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700&display=swap" />
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
