--- a/index.html
+++ b/index.html
@@ -2,40 +2,60 @@
 <html lang="en">
 
 <head>
+  <!-- Character set and viewport settings -->
   <meta charset='UTF-8' />
-  <meta name='viewport' content='width=device-width, initial-scale=1.0' />
+  <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=5.0' />
+  <!-- Compatibility with Internet Explorer -->
   <meta http-equiv='X-UA-Compatible' content='IE=edge' />
-  <meta name='theme-color' content='#fe6f14' />
+  <!-- Primary Meta Tags -->
   <title>Profit&Lost - Simplified Personal Financial Management</title>
   <meta name='description'
-    content='Profit&Lost helps you efficiently manage your personal finances. Track expenses, manage bank accounts, and gain insights into your financial health.'>
+    content='Profit&Lost helps you efficiently manage your personal finances. Track expenses, manage bank accounts, and gain insights into your financial health.' />
   <meta name='keywords'
     content='personal finance, financial management, expense tracking, budget planning, bank accounts, Profit&Lost' />
-  <link rel='shortcut icon'
-    href='https://res.cloudinary.com/dz0mwxb0v/image/upload/v1697122157/profit-lost.com/logo/logo.svg'
-    type='image/x-icon' />
-  <link rel='apple-touch-icon'
-    href='https://res.cloudinary.com/dz0mwxb0v/image/upload/v1697122157/profit-lost.com/logo/logo.svg' />
+  <meta name='author' content='Brian G. Novoa' />
+  <!-- Theme and Colors -->
+  <meta name='theme-color' content='#fe6f14' />
+  <meta name='msapplication-TileColor' content='#fe6f14' />
+  <meta name='apple-mobile-web-app-capable' content='yes' />
+  <meta name='apple-mobile-web-app-status-bar-style' content='default' />
+  <!-- Favicon and App Icons -->
+  <link rel="icon" type="image/svg+xml" href="https://res.cloudinary.com/dz0mwxb0v/image/upload/v1697122157/profit-lost.com/logo/logo.svg" width="32" height="32" />
+  <link rel="apple-touch-icon" href="https://res.cloudinary.com/dz0mwxb0v/image/upload/v1697122157/profit-lost.com/logo/logo.svg" width="180" height="180" />
+  <link rel='mask-icon' href='https://res.cloudinary.com/dz0mwxb0v/image/upload/v1697122157/profit-lost.com/logo/logo.svg' color='#fe6f14' />
+  <!-- Open Graph / Facebook -->
+  <meta property='og:type' content='website' />
+  <meta property='og:url' content='https://profit-lost.com' />
   <meta property='og:title' content='Profit&Lost - Simplified Personal Financial Management' />
   <meta property='og:description'
     content='Efficiently manage your personal finances with Profit&Lost. Track your expenses, manage accounts, and stay financially organized.' />
   <meta property='og:image'
     content='https://res.cloudinary.com/dz0mwxb0v/image/upload/v1697122157/profit-lost.com/logo/logo.svg' />
-  <meta property='og:url' content='https://profit-lost.com' />
-  <meta property='og:type' content='website' />
+  <!-- Twitter -->
   <meta name='twitter:card' content='summary_large_image' />
+  <meta name='twitter:url' content='https://profit-lost.com' />
   <meta name='twitter:title' content='Profit&Lost - Simplified Personal Financial Management' />
   <meta name='twitter:description'
     content='Efficiently manage your personal finances with Profit&Lost. Track your expenses, manage accounts, and stay financially organized.' />
   <meta name='twitter:image'
     content='https://res.cloudinary.com/dz0mwxb0v/image/upload/v1697122157/profit-lost.com/logo/logo.svg' />
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700&display=swap" />
-  <link rel="stylesheet"
-    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+  <!-- Fonts -->
+  <link rel='preconnect' href='https://fonts.googleapis.com' />
+  <link rel='preconnect' href='https://fonts.gstatic.com' crossorigin />
+  <link rel='stylesheet' href='https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700&display=swap' />
+  <link rel='stylesheet' href='https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200' />
+  <!-- PWA manifest -->
+  <link rel='manifest' href='/manifest.json' />
+  <!-- SEO and Performance Optimization -->
+  <meta name="robots" content="index, follow" />
+  <meta name="googlebot" content="index, follow" />
+  <link rel="canonical" href="https://profit-lost.com" />
 </head>
 
 <body>
+  <!-- Main application root element -->
   <div id="root"></div>
+  <!-- Main JavaScript file -->
   <script type="module" src="/src/main.tsx"></script>
 </body>
 
