--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" translate="no">
 
 <head>
   <!-- Character set and viewport settings -->
@@ -20,9 +20,15 @@
   <meta name='apple-mobile-web-app-capable' content='yes' />
   <meta name='apple-mobile-web-app-status-bar-style' content='default' />
   <!-- Favicon and App Icons -->
-  <link rel="icon" type="image/svg+xml" href="https://res.cloudinary.com/dz0mwxb0v/image/upload/v1697122157/profit-lost.com/logo/logo.svg" width="32" height="32" />
-  <link rel="apple-touch-icon" href="https://res.cloudinary.com/dz0mwxb0v/image/upload/v1697122157/profit-lost.com/logo/logo.svg" width="180" height="180" />
-  <link rel='mask-icon' href='https://res.cloudinary.com/dz0mwxb0v/image/upload/v1697122157/profit-lost.com/logo/logo.svg' color='#fe6f14' />
+  <link rel="icon" type="image/svg+xml"
+    href="https://res.cloudinary.com/dz0mwxb0v/image/upload/v1697122157/profit-lost.com/logo/logo.svg" width="32"
+    height="32" />
+  <link rel="apple-touch-icon"
+    href="https://res.cloudinary.com/dz0mwxb0v/image/upload/v1697122157/profit-lost.com/logo/logo.svg" width="180"
+    height="180" />
+  <link rel='mask-icon'
+    href='https://res.cloudinary.com/dz0mwxb0v/image/upload/v1697122157/profit-lost.com/logo/logo.svg'
+    color='#fe6f14' />
   <!-- Open Graph / Facebook -->
   <meta property='og:type' content='website' />
   <meta property='og:url' content='https://profit-lost.com' />
@@ -43,7 +49,8 @@
   <link rel='preconnect' href='https://fonts.googleapis.com' />
   <link rel='preconnect' href='https://fonts.gstatic.com' crossorigin />
   <link rel='stylesheet' href='https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700&display=swap' />
-  <link rel='stylesheet' href='https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200' />
+  <link rel='stylesheet'
+    href='https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200' />
   <!-- PWA manifest -->
   <link rel='manifest' href='/manifest.json' />
   <!-- SEO and Performance Optimization -->
