--- a/index.html
+++ b/index.html
@@ -2,24 +2,24 @@
 <html lang="en" translate="no">
 
 <head>
-  <!-- Character set and viewport settings -->
+  <!-- Character set and viewport settings for proper rendering -->
   <meta charset='UTF-8' />
   <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=5.0' />
-  <!-- Compatibility with Internet Explorer -->
+  <!-- Ensures compatibility with Internet Explorer -->
   <meta http-equiv='X-UA-Compatible' content='IE=edge' />
-  <!-- Primary Meta Tags -->
+  <!-- Primary Meta Tags for SEO -->
   <title>Profit&Lost - Simplified Personal Financial Management</title>
   <meta name='description'
     content='Profit&Lost helps you efficiently manage your personal finances. Track expenses, manage bank accounts, and gain insights into your financial health.' />
-  <meta name='keywords'
-    content='personal finance, financial management, expense tracking, budget planning, bank accounts, Profit&Lost' />
+  <meta name="keywords"
+    content="personal finance, financial management, expense tracking, budget planning, bank accounts, Profit&Lost, profit-lost, Profit Lost, gestión financiera, control de gastos, seguimiento de ingresos, ahorro personal, presupuesto mensual, finanzas personales, control financiero, app finanzas, gestor gastos, planificación financiera" />
   <meta name='author' content='Brian G. Novoa' />
-  <!-- Theme and Colors -->
+  <!-- Theme and Colors for branding -->
   <meta name='theme-color' content='#fe6f14' />
   <meta name='msapplication-TileColor' content='#fe6f14' />
   <meta name='apple-mobile-web-app-capable' content='yes' />
   <meta name='apple-mobile-web-app-status-bar-style' content='default' />
-  <!-- Favicon and App Icons -->
+  <!-- Favicon and App Icons for better user experience -->
   <link rel="icon" type="image/svg+xml"
     href="https://res.cloudinary.com/dz0mwxb0v/image/upload/v1697122157/profit-lost.com/logo/logo.svg" width="32"
     height="32" />
@@ -29,7 +29,7 @@
   <link rel='mask-icon'
     href='https://res.cloudinary.com/dz0mwxb0v/image/upload/v1697122157/profit-lost.com/logo/logo.svg'
     color='#fe6f14' />
-  <!-- Open Graph / Facebook -->
+  <!-- Open Graph / Facebook Meta Tags for social sharing -->
   <meta property='og:type' content='website' />
   <meta property='og:url' content='https://profit-lost.com' />
   <meta property='og:title' content='Profit&Lost - Simplified Personal Financial Management' />
@@ -37,7 +37,7 @@
     content='Efficiently manage your personal finances with Profit&Lost. Track your expenses, manage accounts, and stay financially organized.' />
   <meta property='og:image'
     content='https://res.cloudinary.com/dz0mwxb0v/image/upload/v1697122157/profit-lost.com/logo/logo.svg' />
-  <!-- Twitter -->
+  <!-- Twitter Meta Tags for social sharing -->
   <meta name='twitter:card' content='summary_large_image' />
   <meta name='twitter:url' content='https://profit-lost.com' />
   <meta name='twitter:title' content='Profit&Lost - Simplified Personal Financial Management' />
@@ -45,24 +45,24 @@
     content='Efficiently manage your personal finances with Profit&Lost. Track your expenses, manage accounts, and stay financially organized.' />
   <meta name='twitter:image'
     content='https://res.cloudinary.com/dz0mwxb0v/image/upload/v1697122157/profit-lost.com/logo/logo.svg' />
-  <!-- Fonts -->
+  <!-- Fonts for better typography -->
   <link rel='preconnect' href='https://fonts.googleapis.com' />
   <link rel='preconnect' href='https://fonts.gstatic.com' crossorigin />
   <link rel='stylesheet' href='https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700&display=swap' />
   <link rel='stylesheet'
     href='https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200' />
-  <!-- PWA manifest -->
+  <!-- PWA manifest for Progressive Web App support -->
   <link rel='manifest' href='/manifest.json' />
-  <!-- SEO and Performance Optimization -->
+  <!-- SEO and Performance Optimization settings -->
   <meta name="robots" content="index, follow" />
   <meta name="googlebot" content="index, follow" />
   <link rel="canonical" href="https://profit-lost.com" />
 </head>
 
 <body>
-  <!-- Main application root element -->
+  <!-- Main application root element for React -->
   <div id="root"></div>
-  <!-- Main JavaScript file -->
+  <!-- Main JavaScript file for application logic -->
   <script type="module" src="/src/main.tsx"></script>
 </body>
 
