--- a/index.html
+++ b/index.html
@@ -20,12 +20,18 @@
   <meta name='apple-mobile-web-app-capable' content='yes' />
   <meta name='apple-mobile-web-app-status-bar-style' content='default' />
   <!-- Favicon and App Icons for better user experience -->
-  <link rel="apple-touch-icon" sizes="180x180" href="https://res.cloudinary.com/dnhlagojg/image/upload/v1740218476/AppPhotos/Brand/favicon/apple-touch-icon.png">
-  <link rel="icon" type="image/svg+xml" href="https://res.cloudinary.com/dnhlagojg/image/upload/v1740218528/AppPhotos/Brand/favicon/faviconSVG.svg">
-  <link rel="icon" type="image/png" sizes="512x512" href="https://res.cloudinary.com/dnhlagojg/image/upload/v1740218742/AppPhotos/Brand/favicon/favicon-512x512.png">
-  <link rel="icon" type="image/png" sizes="192x192" href="https://res.cloudinary.com/dnhlagojg/image/upload/v1740218719/AppPhotos/Brand/favicon/favicon-192x192.png">
-  <link rel="icon" type="image/png" sizes="96x96" href="https://res.cloudinary.com/dnhlagojg/image/upload/v1740218646/AppPhotos/Brand/favicon/favicon-96x96.png">
-  <link rel="shortcut icon" href="https://res.cloudinary.com/dnhlagojg/image/upload/v1740218504/AppPhotos/Brand/favicon/faviconICO.ico">
+  <link rel="apple-touch-icon" sizes="180x180"
+    href="https://res.cloudinary.com/dnhlagojg/image/upload/v1740218476/AppPhotos/Brand/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/svg+xml"
+    href="https://res.cloudinary.com/dnhlagojg/image/upload/v1740218528/AppPhotos/Brand/favicon/faviconSVG.svg">
+  <link rel="icon" type="image/png" sizes="512x512"
+    href="https://res.cloudinary.com/dnhlagojg/image/upload/v1740218742/AppPhotos/Brand/favicon/favicon-512x512.png">
+  <link rel="icon" type="image/png" sizes="192x192"
+    href="https://res.cloudinary.com/dnhlagojg/image/upload/v1740218719/AppPhotos/Brand/favicon/favicon-192x192.png">
+  <link rel="icon" type="image/png" sizes="96x96"
+    href="https://res.cloudinary.com/dnhlagojg/image/upload/v1740218646/AppPhotos/Brand/favicon/favicon-96x96.png">
+  <link rel="shortcut icon"
+    href="https://res.cloudinary.com/dnhlagojg/image/upload/v1740218504/AppPhotos/Brand/favicon/faviconICO.ico">
   <meta name="apple-mobile-web-app-title" content="Profit&Lost">
   <meta name="application-name" content="Profit&Lost">
   <!-- Open Graph / Facebook Meta Tags for social sharing -->
