--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <meta name='theme-color' content='#fe6f14' />
   <meta name='msapplication-TileColor' content='#fe6f14' />
   <meta name='apple-mobile-web-app-capable' content='yes' />
+  <meta name="mobile-web-app-capable" content="yes" />
   <meta name='apple-mobile-web-app-status-bar-style' content='default' />
   <!-- Favicon and App Icons for better user experience -->
   <link rel="apple-touch-icon" sizes="180x180"
