actualizamos imgen de OG y TW para compartir

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   <meta property='og:description'
     content='Efficiently manage your personal finances with Profit&Lost. Track your expenses, manage accounts, and stay financially organized.' />
   <meta property='og:image'
-    content='https://res.cloudinary.com/dz0mwxb0v/image/upload/v1697122157/profit-lost.com/logo/logo.svg' />
+    content='https://res.cloudinary.com/dnhlagojg/image/upload/v1739553639/AppPhotos/Brand/mockup/annualreport.png' />
   <!-- Twitter Meta Tags for social sharing -->
   <meta name='twitter:card' content='summary_large_image' />
   <meta name='twitter:url' content='https://profit-lost.com' />
@@ -60,7 +60,7 @@
   <meta name='twitter:description'
     content='Efficiently manage your personal finances with Profit&Lost. Track your expenses, manage accounts, and stay financially organized.' />
   <meta name='twitter:image'
-    content='https://res.cloudinary.com/dz0mwxb0v/image/upload/v1697122157/profit-lost.com/logo/logo.svg' />
+    content='https://res.cloudinary.com/dnhlagojg/image/upload/v1739553639/AppPhotos/Brand/mockup/annualreport.png' />
   <!-- Fonts for better typography -->
   <link rel='preconnect' href='https://fonts.googleapis.com' />
   <link rel='preconnect' href='https://fonts.gstatic.com' crossorigin />
