fix/Movemos fotos principales a hostinger

--- a/index.html
+++ b/index.html
@@ -31,18 +31,12 @@
   <meta name="mobile-web-app-capable" content="yes" />
   <meta name='apple-mobile-web-app-status-bar-style' content='default' />
   <!-- Favicon and App Icons for better user experience -->
-  <link rel="apple-touch-icon" sizes="180x180"
-    href="https://res.cloudinary.com/dnhlagojg/image/upload/v1740218476/AppPhotos/Brand/favicon/apple-touch-icon.png">
-  <link rel="icon" type="image/svg+xml"
-    href="https://res.cloudinary.com/dnhlagojg/image/upload/v1740218528/AppPhotos/Brand/favicon/faviconSVG.svg">
-  <link rel="icon" type="image/png" sizes="512x512"
-    href="https://res.cloudinary.com/dnhlagojg/image/upload/v1740218742/AppPhotos/Brand/favicon/favicon-512x512.png">
-  <link rel="icon" type="image/png" sizes="192x192"
-    href="https://res.cloudinary.com/dnhlagojg/image/upload/v1740218719/AppPhotos/Brand/favicon/favicon-192x192.png">
-  <link rel="icon" type="image/png" sizes="96x96"
-    href="https://res.cloudinary.com/dnhlagojg/image/upload/v1740218646/AppPhotos/Brand/favicon/favicon-96x96.png">
-  <link rel="shortcut icon"
-    href="https://res.cloudinary.com/dnhlagojg/image/upload/v1740218504/AppPhotos/Brand/favicon/faviconICO.ico">
+  <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/svg+xml" href="/favicon/faviconSVG.svg">
+  <link rel="icon" type="image/png" sizes="512x512" href="/favicon/favicon-512x512.jpg">
+  <link rel="icon" type="image/png" sizes="192x192" href="/favicon/favicon-192x192.jpg">
+  <link rel="icon" type="image/png" sizes="96x96" href="/favicon/favicon-96x96.png">
+  <link rel="shortcut icon" href="/favicon/faviconICO.ico">
   <meta name="apple-mobile-web-app-title" content="Profit&Lost">
   <meta name="application-name" content="Profit&Lost">
   <!-- Open Graph / Facebook Meta Tags for social sharing -->
@@ -52,7 +46,7 @@
   <meta property='og:description'
     content='Efficiently manage your personal finances with Profit&Lost. Track your expenses, manage accounts, and stay financially organized.' />
   <meta property='og:image'
-    content='https://res.cloudinary.com/dnhlagojg/image/upload/v1739553639/AppPhotos/Brand/mockup/annualreport.png' />
+    content='/assets/mockup/AnnualReport.png' />
   <!-- Twitter Meta Tags for social sharing -->
   <meta name='twitter:card' content='summary_large_image' />
   <meta name='twitter:url' content='https://profit-lost.com' />
@@ -60,7 +54,7 @@
   <meta name='twitter:description'
     content='Efficiently manage your personal finances with Profit&Lost. Track your expenses, manage accounts, and stay financially organized.' />
   <meta name='twitter:image'
-    content='https://res.cloudinary.com/dnhlagojg/image/upload/v1739553639/AppPhotos/Brand/mockup/annualreport.png' />
+    content='/assets/mockup/AnnualReport.png' />
   <!-- Fonts for better typography -->
   <link rel='preconnect' href='https://fonts.googleapis.com' />
   <link rel='preconnect' href='https://fonts.gstatic.com' crossorigin />
